tests/samples/compile_errors/fixed_length_string/in_procedure.bas
Attribute VB_Name = "FixedStrInProc"
Sub TestFixed()
    Dim s As String * 10  ' Fixed-length String not allowed at procedure level
End Sub
